[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["jokeru"]
description = "telegram-lkmex-rates"
name = "telegram-lkmex-rates"
version = "0.1.0"
[tool.poetry.dependencies]
Telethon = "^1.24.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
